--- a/app/src/main/res/layout/activity_dzikir_petang.xml
+++ b/app/src/main/res/layout/activity_dzikir_petang.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Activity.DzikirPetangActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_dzikir_petang"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_rv_dzikir_petang"
+        android:padding="16dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
