--- a/app/src/main/res/layout/activity_qauliyah_sholat.xml
+++ b/app/src/main/res/layout/activity_qauliyah_sholat.xml
@@ -27,5 +27,6 @@
         android:id="@+id/rv_qauliyah_sholat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_txt_qauliyah" />
+        android:layout_below="@id/tv_txt_qauliyah"
+        tools:listitem="@layout/row_item_dzikir_doa"/>
 </RelativeLayout>
