Error, force close (BLM FIX)

--- a/app/src/main/res/layout/activity_harian_dzikir_doa.xml
+++ b/app/src/main/res/layout/activity_harian_dzikir_doa.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity.HarianDzikirDoaActivity">
+    tools:context=".activity.HarianDzikirDoaActivity">
 
     <TextView
         android:id="@+id/tv_dzikir_doa_harian"
