--- a/app/src/main/res/layout/activity_detail_artikel.xml
+++ b/app/src/main/res/layout/activity_detail_artikel.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".Activity.DetailArtikelActivity">
+    tools:context=".activity.DetailArtikelActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_img_detail"
@@ -14,7 +14,7 @@
         android:layout_height="200dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
-        app:layout_constraintBottom_toTopOf="@id/cv_img_detail"
+        app:layout_constraintBottom_toTopOf="@id/tv_detail_title"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -40,13 +40,13 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/sv_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_title" />
+        app:layout_constraintTop_toBottomOf="@id/cv_img_detail" />
 
     <ScrollView
         android:id="@+id/sv_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_detail_title">
 
         <TextView
