--- a/app/src/main/res/layout/activity_setiap_saat_dzikir.xml
+++ b/app/src/main/res/layout/activity_setiap_saat_dzikir.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".Activity.SetiapSaatDzikirActivity">
+    tools:context=".activity.SetiapSaatDzikirActivity">
 
     <TextView
         android:id="@+id/tv_txt_setiap_saat"
@@ -27,5 +26,6 @@
         android:id="@+id/rv_dzikir_setiap_saat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_txt_setiap_saat" />
+        android:layout_below="@id/tv_txt_setiap_saat"
+        tools:listitem="@layout/row_item_dzikir_doa"/>
 </RelativeLayout>
